# vvn-ce

./: .gitignore  CLAUDE.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docker-publish.yml  helm-publish.yml  trivy.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4eaabc31cf4c_add_votes_model_source_and_openrouter_.py  4f6f46dd6a96_initial_schema.py  76fb625e49ae_word_votes_table_and_drop_integer_.py  c98963b230da_richer_word_card_and_dedupe.py  da6af16b2716_vdict_words_seed_dictionary_table.py  dd624386b50f_drop_openrouter_models_table.py  e3f7a91b0c42_add_audio_url_to_vdict_words.py  f1b8d293a047_vdict_friendly_default_to_object.py
backend/app/: config.py  db.py  main.py
backend/app/jobs/: crawl_vdict.py  vdict_parser.py
backend/app/models/: __init__.py  vdict_word.py  vote.py  word.py
backend/app/routes/: auth_deps.py  dev.py  game.py  health.py  words.py
backend/app/schemas/: word.py
backend/app/services/: cache.py  google_auth.py  google_translate.py  openrouter.py  vdict.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_explain.py
backend/tests/unit/: test_helpers.py  test_parser.py
crawler/: Dockerfile  pyproject.toml
crawler/app/: config.py  db.py  main.py  models.py  parser.py  service.py
crawler/k8s/: cronjob.yaml  secret.yaml.tpl
docs/architecture/: README.md  roadmap.md  tech-stack.md
docs/architecture/adr/: 001-backend-owns-api-key.md  002-svelte-for-ce.md  003-word-vs-sentence-save-flow.md  004-postgresql-over-sqlite.md  005-redis-for-llm-cache.md  006-models-sync-job.md  007-client-model-selection.md  008-vietnamese-explanations.md  009-word-voting.md  010-hardcode-model-no-picker.md  011-db-as-second-tier-cache.md  012-richer-card-structure.md  013-word-bank-chrome-storage-cache.md  014-lookup-button-gate.md  015-popup-theming.md  016-per-user-vote-table.md  017-google-oauth-via-chrome-identity.md  018-multi-paragraph-explanations.md  019-spaced-repetition-design.md  (+3 more)
extension/: manifest.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vite.content.config.ts  vitest.config.ts
extension/src/: vite-env.d.ts
helm/vvn-ce/: Chart.yaml  values.yaml
(+27 files in other folders)
