[project]
name = "vdict-crawler"
version = "0.1.0"
description = "Standalone bulk crawler for vdict.com — deployed as a k8s CronJob"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "selectolax>=0.4.9",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.31.0",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]
